# yolo-tensorrt

./: .gitignore  README.md  pyproject.toml  run.py
yolotensorrt/: trtmodel.py  utils.py
